---
source: crates/wgpu_pp/src/preprocessor.rs
assertion_line: 367
expression: result.unwrap()
---
fn get_from_packed_u8_flats(u8_index: u32) -> u32 {
    return u32(         u32(flats[u8_index / u32(4)] >> (u32(u8_index % u32(4)) * u32(8))) & u32(0xFF)     );
}
